feat: responsive about with images

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="members">
         <div class="kristi member-item">
           <div class="bg">
-            <img src="/kristi.webp" alt="kristi">
+            <img src="/kris-color.jpg" alt="kristi">
           </div>
           
           <div class="about">
@@ -154,7 +154,7 @@
         </div>
         <div class="phil member-item">
           <div class="bg">
-            <img src="/Phil.webp" alt="kristi">
+            <img src="/phil-color.jpg" alt="kristi">
           </div>
 
           <div class="about">
@@ -238,27 +238,17 @@
             </div>
             <div class="swiper-container modal first-modal hidden">
               <swiper-container class="swiper-wrapper">
-                <swiper-slide >
+                <swiper-slide class="swiper-slide" >
                   <div class="work-slide-item">
 
                   </div>
                 </swiper-slide>
-                <swiper-slide>
+                <swiper-slide class="swiper-slide">
                   <div class="work-slide-item">
 
                   </div>
                 </swiper-slide>
-                <swiper-slide>
-                  <div class="work-slide-item">
-
-                  </div>
-                </swiper-slide>
-                <swiper-slide >
-                  <div class="work-slide-item">
-
-                  </div>
-                </swiper-slide>
-                <swiper-slide>
+                <swiper-slide class="swiper-slide">
                   <div class="work-slide-item">
 
                   </div>
