--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="projects-section">
 
           <div class="work-container left">
-            <div class="work-item first-item">
+            <div class="work-item-fred first-item">
               <div class="name">
                 <p>*Fredericks's</p>
               </div>
@@ -261,7 +261,7 @@
           </div>
 
           <div class="work-container left">
-            <div class="work-item first-item">
+            <div class="work-item-mei first-item">
               <div class="name">
                 <p>*Meijer quality</p>
               </div>
@@ -272,7 +272,7 @@
           </div>
 
           <div class="work-container left">
-            <div class="work-item first-item">
+            <div class="work-item-thyme first-item">
               <div class="name">
                 <p>*Fresh Thyme</p>
               </div>
@@ -283,7 +283,7 @@
           </div>
           
           <div class="work-container left">
-            <div class="work-item first-item">
+            <div class="work-item-brand first-item">
               <div class="name">
                 <p>*Meijer own brand</p>
               </div>
@@ -294,7 +294,7 @@
           </div>
           
           <div class="work-container left">
-            <div class="work-item first-item">
+            <div class="work-item-wig first-item">
               <div class="name">
                 <p>*Wiggles</p>
               </div>
