fix: partial general changes

--- a/index.html
+++ b/index.html
@@ -91,12 +91,7 @@
     <div class="copyright">
       <div>
         <p class="desktop">COPYRIGHT 2023 - HOT LAVA* - ALL RIGHTS RESERVED. <span>LEGAL & PRIVACY NOTICES</span></p>
-        <p class="mobile"></p>
-      </div>
-      <div class="line">
-      </div>
-      <div>
-        <p>*You&apos;re going to like it here.</p>
+        <p class="mobile">COPYRIGHT 2023 - HOT LAVA*</p>
       </div>
     </div>
 
@@ -112,28 +107,46 @@
     </section>
     
     <section class="fade-hero-section">
-      <div class="title">
-        <h3><span>*</span> <span>This is our</span> <span>word for</span> <span>epiphany.</span></h3>
+      <div class="phrase">
+        <div class="title">
+          <h3><span>*</span><span></span>This is our word for epiphany.<span>We had one and that&#8217;s why we&#8217;re here…</span></h3>
+        </div>
+      </div>
+
+      <div class="shortcut">
+        <div class="title">
+          <div class="about-shortcut">
+            <h3><span>*</span><span>There&#8217;s a</span><span>shortcut to</span><span>greatness.</span></h3>
+          </div>
+          <div class="shortcut-description">
+            <p>
+              <span><strong>So we&#8217;ll give it to you straight:</strong></span>we give our clients direct access to our award-winning creators and doers.
+            </p>
+            <p>
+              <span><strong>No layers,</strong></span>just creatives who excel at handling complexity.
+            </p>
+            <p>
+              <span><strong>Retail is our specialty,</strong></span>
+              and we embody its most renowned principles – quick and personal service. Our agile approach results in 
+              effective, defining work. 
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
     <section id="about-us" class="about-section">
-      <div class="phrase">
-        <div class="title">
-          <h3><span>*</span> <span>We had one,</span> <span>and that&apos;s why</span> <span>we&apos;re here.</span></h3>
-        </div>
-      </div>
-
       <div class="team">
         <div class="title">
           <div class="about-team">
-            <h3><span>*</span><span>About</span><span>the team</span></h3>
+            <h3><span>*</span><span>Nice to</span><span>meet you.</span></h3>
           </div>
           <div class="team-description">
             <p>
-              After a long and successful partnership, Phil and Kristi were eager to create something uniquely theirs – a 
-              creative hub where they could have a blast crafting the work they love, all while giving their 
-              client-partners bold, attention-grabbing results.
+              Hot Lava is the very best of our big-brand, big-agency experiences. Just smaller. 
+              And more human. Our strong, supportive network ensures bigger thinking, better 
+              efficiencies, faster results and bold, sticky work.*
+              <span>*Without the mess.</span>
             </p>
           </div>
         </div>
@@ -168,8 +181,8 @@
             </div>
             <div class="description">
               <p>
-                Phil&apos;s  thoughtful and boundary-pushing approach has resulted in cohesive, impactful work for the world&apos;s best brands, at the best agencies in Chicago and NYC.
-                Brand logos: Kellogg, Kimberly-Clark, Meijer, BuyBuy Baby, Dole,
+                Phil&#8217;s thoughtful and boundary-pushing approach has resulted in cohesive, impactful 
+                work for the world&#8217;s best brands, at the best agencies in Chicago and NYC. 
               </p>
             </div>
           </div>
@@ -178,22 +191,22 @@
     </section>
 
     <section  class="how-we-work">
-      <div id="our-way" class="our-way-wrapper">
-        <div class="main-slide how-we-work-item">
+      <div class="our-way-wrapper">
+        <div id="our-way" class="main-slide how-we-work-item">
           <div class="about-phrase">
-            <h3><span>*</span><span>it&apos;s a</span><span>new way</span><span>to work</span></h3>
+            <h3><span>*</span><span>it&#8217;s a</span><span>new way</span><span>to work</span></h3>
           </div>
           <div class="about-agency">
             <p>
-              We&apos;re not your traditional agency – we&apos;re intentionally small, so our service is quick and personal. 
-              We&apos;re all ears to hear your story, and we&apos;re a safe space to help you tell it.
+              We&#8217;re not your traditional agency – we&#8217;re intentionally small, so our service is quick and personal. 
+              We&#8217;re all ears to hear your story, and we&#8217;re a safe space to help you tell it.
             </p>
           </div>
         </div>
 
         <div class="secondary-slides how-we-work-item">
           <div class="about-phrase">
-            <h3><span>Strong</span><span>insight-driven</span><span>strategy</span></h3>
+            <h3><span>01</span><span>Strong</span><span>insight-driven</span><span>strategy</span></h3>
           </div>
           <div class="about-agency">
             <p>
@@ -205,7 +218,7 @@
 
         <div class="secondary-slides how-we-work-item">
           <div class="about-phrase">
-            <h3><span>Distinct,</span><span>compelling</span><span>ideas</span></h3>
+            <h3><span>02</span><span>Distinct,</span><span>compelling</span><span>ideas</span></h3>
           </div>
           <div class="about-agency">
             <p>
@@ -217,7 +230,7 @@
         
         <div class="secondary-slides how-we-work-item">
           <div class="about-phrase">
-            <h3><span>We squeeze</span><span>content from</span><span>pennies</span></h3>
+            <h3><span>03</span><span>We squeeze</span><span>content from</span><span>pennies</span></h3>
           </div>
           <div class="about-agency">
             <p>
@@ -436,23 +449,23 @@
               <div>
                 <a href="#">
                   <svg width="16" height="26" viewBox="0 0 16 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M9.46179 14.9726V25.0343H4.8398V14.9726H1V10.8928H4.8398V9.40846C4.8398 3.89763 7.14191 1 12.0128 1C13.506 1 13.8793 1.23999 14.6971 1.43553V5.47088C13.7816 5.31089 13.5238 5.22201 12.5727 5.22201C11.4439 5.22201 10.8395 5.54199 10.2884 6.17307C9.73733 6.80415 9.46179 7.89743 9.46179 9.46179V10.9017H14.6971L13.2927 14.9815H9.46179V14.9726Z" stroke="#1C374D" stroke-width="1.37339"/>
+                    <path d="M9.46179 14.9726V25.0343H4.8398V14.9726H1V10.8928H4.8398V9.40846C4.8398 3.89763 7.14191 1 12.0128 1C13.506 1 13.8793 1.23999 14.6971 1.43553V5.47088C13.7816 5.31089 13.5238 5.22201 12.5727 5.22201C11.4439 5.22201 10.8395 5.54199 10.2884 6.17307C9.73733 6.80415 9.46179 7.89743 9.46179 9.46179V10.9017H14.6971L13.2927 14.9815H9.46179V14.9726Z" stroke="#EE512F" stroke-width="1.37339"/>
                   </svg>
                 </a>
               </div>
               <div>
                 <a href="#">
                   <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M18.1575 21.6009H4.44335C2.54824 21.6009 1 20.0526 1 18.1575V4.44335C1 2.54824 2.54824 1 4.44335 1H18.1575C20.0526 1 21.6009 2.54824 21.6009 4.44335V18.1575C21.6009 20.0611 20.0611 21.6009 18.1575 21.6009Z" stroke="#1C374D" stroke-width="1.37339"/>
-                    <path d="M7.56386 15.0428C8.56218 16.0411 9.89045 16.591 11.3033 16.591C12.7162 16.591 14.036 16.0411 15.0428 15.0428C16.0411 14.0445 16.591 12.7162 16.591 11.3033C16.591 9.89045 16.0411 8.56218 15.0428 7.56386C14.0445 6.56555 12.7162 6.01562 11.3033 6.01562C9.89045 6.01562 8.56218 6.56555 7.56386 7.56386C6.56554 8.56218 6.01562 9.89045 6.01562 11.3033C6.01562 12.7162 6.56554 14.0445 7.56386 15.0428Z" stroke="#1C374D" stroke-width="1.37339"/>
-                    <path d="M17.6246 5.84303C18.1854 5.84303 18.6399 5.38848 18.6399 4.82776C18.6399 4.26705 18.1854 3.8125 17.6246 3.8125C17.0639 3.8125 16.6094 4.26705 16.6094 4.82776C16.6094 5.38848 17.0639 5.84303 17.6246 5.84303Z" stroke="#1C374D" stroke-width="1.37339"/>
+                    <path d="M18.1575 21.6009H4.44335C2.54824 21.6009 1 20.0526 1 18.1575V4.44335C1 2.54824 2.54824 1 4.44335 1H18.1575C20.0526 1 21.6009 2.54824 21.6009 4.44335V18.1575C21.6009 20.0611 20.0611 21.6009 18.1575 21.6009Z" stroke="#EE512F" stroke-width="1.37339"/>
+                    <path d="M7.56386 15.0428C8.56218 16.0411 9.89045 16.591 11.3033 16.591C12.7162 16.591 14.036 16.0411 15.0428 15.0428C16.0411 14.0445 16.591 12.7162 16.591 11.3033C16.591 9.89045 16.0411 8.56218 15.0428 7.56386C14.0445 6.56555 12.7162 6.01562 11.3033 6.01562C9.89045 6.01562 8.56218 6.56555 7.56386 7.56386C6.56554 8.56218 6.01562 9.89045 6.01562 11.3033C6.01562 12.7162 6.56554 14.0445 7.56386 15.0428Z" stroke="#EE512F" stroke-width="1.37339"/>
+                    <path d="M17.6246 5.84303C18.1854 5.84303 18.6399 5.38848 18.6399 4.82776C18.6399 4.26705 18.1854 3.8125 17.6246 3.8125C17.0639 3.8125 16.6094 4.26705 16.6094 4.82776C16.6094 5.38848 17.0639 5.84303 17.6246 5.84303Z" stroke="#EE512F" stroke-width="1.37339"/>
                   </svg>
                 </a>
               </div>
               <div>
                 <a href="#">
                   <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M13.0928 9.31543L21.2828 0H19.3421L12.2308 8.08857L6.55099 0H0L8.58891 12.2313L0 22H1.94093L9.45075 13.4583L15.449 22H22L13.0926 9.31543H13.0932H13.0928ZM10.4345 12.3389L9.56424 11.121L2.64016 1.42957H5.62114L11.2091 9.25085L12.0794 10.4687L19.343 20.6352H16.362L10.4347 12.3392V12.3387L10.4345 12.3389Z" fill="#1C374D"/>
+                    <path d="M13.0928 9.31543L21.2828 0H19.3421L12.2308 8.08857L6.55099 0H0L8.58891 12.2313L0 22H1.94093L9.45075 13.4583L15.449 22H22L13.0926 9.31543H13.0932H13.0928ZM10.4345 12.3389L9.56424 11.121L2.64016 1.42957H5.62114L11.2091 9.25085L12.0794 10.4687L19.343 20.6352H16.362L10.4347 12.3392V12.3387L10.4345 12.3389Z" fill="#EE512F"/>
                   </svg>
                 </a>
               </div>
