fix general fixes

--- a/index.html
+++ b/index.html
@@ -125,11 +125,6 @@
             <p>
               <span><strong>No layers,</strong></span>just creatives who excel at handling complexity.
             </p>
-            <p>
-              <span><strong>Retail is our specialty,</strong></span>
-              and we embody its most renowned principles – quick and personal service. Our agile approach results in 
-              effective, defining work. 
-            </p>
           </div>
         </div>
       </div>
@@ -304,7 +299,7 @@
             <swiper-slide class="swiper-slide" >
               <div class="work-slide-item-fred-first">
                 <div class="video video-hidden">
-                  <video height="500" width="500" controls>
+                  <video height="100%" width="100%" controls>
                     <source src="https://player.vimeo.com/progressive_redirect/playback/891428262/rendition/1080p/file.mp4?loc=external&signature=ad1ac65aab40f8e1ee83bfa5d77b28bc66fd0b54467989e891604c2c5b36091c" type="video/mp4" />
                   </video>
                 </div>
@@ -313,7 +308,7 @@
             <swiper-slide class="swiper-slide">
               <div class="work-slide-item-fred-second">
                 <div class="video video-hidden">
-                  <video height="500" width="500" controls>
+                  <video height="100%" width="100%" controls>
                     <source src="https://player.vimeo.com/progressive_redirect/playback/891428216/rendition/1080p/file.mp4?loc=external&signature=14be2789b262925a4aea524a41eaa55d810fc6761252cfae0dbe2188a5f38eb5" type="video/mp4" />
                   </video>
                 </div>
@@ -322,7 +317,7 @@
             <swiper-slide class="swiper-slide">
               <div class="work-slide-item-fred-third">
                 <div class="video video-hidden">
-                  <video height="500" width="500" controls>
+                  <video height="100%" width="100%" controls>
                     <source src="https://player.vimeo.com/progressive_redirect/playback/891428216/rendition/1080p/file.mp4?loc=external&signature=14be2789b262925a4aea524a41eaa55d810fc6761252cfae0dbe2188a5f38eb5" type="video/mp4" />
                   </video>
                 </div>
@@ -347,7 +342,7 @@
             <swiper-slide class="swiper-slide" >
               <div class="work-slide-item-mei-first">
                 <div class="video video-hidden">
-                  <video height="500" width="500" controls>
+                  <video height="100%" width="100%" controls>
                     <source src="https://player.vimeo.com/progressive_redirect/playback/891988063/rendition/1080p/file.mp4?loc=external&signature=f06e20e3690743dd77714fa441d10956129c6c0ad06e8671aea4813fe80f1716" type="video/mp4" />
                   </video>
                 </div>
@@ -389,12 +384,12 @@
                 </div>
               </div>
             </swiper-slide>
-            <swiper-slide class="swiper-slide">
+            <!-- <swiper-slide class="swiper-slide">
               <div class="work-slide-item-mei-fifth">
                 <div class="video video-hidden">
                 </div>
               </div>
-            </swiper-slide>
+            </swiper-slide> -->
             <swiper-slide class="swiper-slide">
               <div class="work-slide-item-fred-fifth">
                 <div class="video video-hidden">
