--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <div class="work-container">
             <div class="work-item work-item-wig fifth-item">
               <div class="name">
-                <p>*Wiggles</p>
+                <p>*Dole Wiggles</p>
               </div>
             </div>
           </div>
