--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,10 @@
     {{> sections/intro }}
     {{> sections/about }} 
     {{> sections/how }} 
-    {{> sections/works }} 
+    {{> sections/work }} 
  
     {{> footer }} 
 
     <script type="module" src="/main.js"></script>
- 
- 
   </body>
 </html>
